--- a/flaskr/templates/index.html
+++ b/flaskr/templates/index.html
@@ -2,7 +2,8 @@
 {% block content %}
     {% for post in posts %}
         <h1>{{ post.title }}</h1>
-        <p>By {{ post.author.username }} on {{ post.date_posted }}</p>
+        <p>By {{ post.author.username }} on {{ post.date_posted.strftime('%m/%d/%Y, %H:%M:%S') }}</p>
         <p>{{ post.content }}</p>
+        <h5><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h5>
     {% endfor %}
 {% endblock content %}
