--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="../static/styles/navbar.css">
     <title></title>
+    <script type="text/javascript" src="../static/app/navbar.js"></script>
 </head>
 <body>
-    <nav>
+    <nav id="custom_nav">
         <div class="logo">
             <h4>Nav</h4>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li>
                 <a href="#">Item</a>
             </li>
@@ -27,6 +29,11 @@
                 <a href="#">Item</a>
              </li>
         </ul>
+        <div id="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </nav>
     {% if current_user.is_authenticated %}
         <a href="{{ url_for('account') }}">Account</a>
