Todolist css done for now

--- a/flaskr/static/styles/login_form.css
+++ b/flaskr/static/styles/login_form.css
@@ -8,5 +8,15 @@
 }
 
 .form-check {
-    height: 31px;
+    display:flex;
+    flex-direction: row;
+}
+
+.form-check-input {
+    position: relative;
+}
+
+.checkbox {
+    position: relative;
+    top: 6px;
 }
