--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="custom_nav">
         <div class="logo">
-            <h4>Nav</h4>
+            <h4>Todo List</h4>
         </div>
         <ul class="nav-links">
             <li>
