--- a/flaskr/templates/login.html
+++ b/flaskr/templates/login.html
@@ -33,17 +33,17 @@
                         {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-check">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-input") }}
-                </div>
+{#                <div class="form-check">#}
+{#                    {{ form.remember(class="form-check-input checkbox") }}#}
+{#                    {{ form.remember.label(class="form-check-input") }}#}
+{#                </div>#}
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
-            <small class="text-muted ml-2">
-                <a href="#">Forgot Password?</a>
-            </small>
+{#            <small class="text-muted ml-2">#}
+{#                <a href="#">Forgot Password?</a>#}
+{#            </small>#}
         </form>
     </div>
     <div class="border-top pt-3">
